@@ -1,6 +1,7 @@
 Revision history for Perl extension FSA::Rules.
 
 0.21 
+      - Calling reset() now empties the machine hashref. [Curtis Poe]
       - User can now turn text wrapping off and on for nodes and labels.
         [Curtis Poe]
       - states() will now croak if called with any non-existent states.
